<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B5D3EB"
    tools:context="com.example.myloginapp.QuestionFunActivity">


    <TextView
        android:id="@+id/NameHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="29dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/Heading"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#fff"
        android:textSize="36sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="105dp"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="137dp"
        android:layout_marginRight="90dp"
        app:srcCompat="@drawable/edu_logos" />

    <TextView
        android:id="@+id/en_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="295dp"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/questionView"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#fff"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/en_score"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_positive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="#368f39"
            android:clickable="true"
            android:text="Yes"
            android:textAllCaps="false"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btn_negative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="#a71e37"
            android:clickable="true"
            android:text="@string/falseN"
            android:textAllCaps="false"
            android:textColor="#fff" />
    </LinearLayout>

    <TextView
        android:id="@+id/en_quest_num"
        android:layout_width="136dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/en_score"
        android:layout_alignBottom="@+id/en_score"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="-1dp"
        android:layout_marginBottom="659dp"
        android:padding="8dp"
        android:text="y/10"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#F44336"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/en_score"
        android:layout_width="wrap_content"
        android:layout_height="62dp"
        android:layout_above="@+id/progBar"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:padding="8dp"
        android:text="Result: 0000"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#F44336"
        android:textSize="18sp" />

    <ProgressBar
        android:id="@+id/progBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:max="10"
        android:progress="1" />
</RelativeLayout>